--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
-  - title: "Posts"
+  - title: "✍ Posts"
     url: /posts/
-  - title: "Categories"
+  - title: "🗂 Categories"
     url: /categories/
-  - title: "Tags"
+  - title: "📑 Tags"
     url: /tags/
-  - title: "About"
+  - title: "🤔 About"
     url: /about/
