--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: 👹 sysgoblins bl0g
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Write-ups, research and analysis from your favourite goblin man.
-twitter_username: @sysgoblin
+twitter_username: sysgoblin
 github_username: sysgoblin
 minimal_mistakes_skin: default
 search: true
@@ -56,7 +56,7 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : ""
+  name   : "c:\hris"
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "🕵️‍♂️"
   links:
