--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ author:
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "🕵️‍♂️"
   links:
-    - label: "sysg0blin"
+    - label: "keybase"
       icon: "fab fa-keybase"
       url: "https://keybase.io/sysg0blin"
     - label: "@sysgoblin"
@@ -111,3 +111,10 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+
+# Analytics
+analytics:
+  provider               : "google-universal" # false (default), "google", "google-universal", "custom"
+  google:
+    tracking_id          : "UA-165463157-1" # Replace this with your ID, or delete
+    anonymize_ip         : false
